# krpsim

./: Cargo.toml  README.md  factorio.sim  generic_config.json  krp_algo.pseudo.rs
.github/workflows/: rust.yml
draw/: Graph compare.drawio
ressources/: ikea
src/: ast.rs  check.rs  check_tests.rs  dna.rs  genetic.rs  genetic_config_parser.rs  genetic_plot.rs  heuristic.rs  inventory.rs  lib.rs  main.rs  node.rs  parser.lalrpop  parser.rs  score.rs  simulate.rs  solver.rs  solver_test.rs  utils.rs
src/score/: hugo.rs  leo.rs  mod.rs
tests/: node.rs  solver.rs
