[package]
name = "krpsim"
version = "0.1.0"
authors = ["Hugo Sabourin <hsabouri@student.42.fr>"]
edition = "2018"
build = "build.rs"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
clap = "2.33.0"
rand = "0.7.3"
serde = "1.0.104"
serde_json = "1.0.48"
gnuplot = "0.0.34"
